# GhostsInRam

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  AigleDor.ini  CMakeLists.txt  CMakePresets.json  FEATURES.md  README.md  START_HERE.md  build.ps1  main.cpp  test_config.ini
core/: EmulatorThread.cpp  EmulatorThread.h  Logging.cpp  Logging.h  MainWindow.cpp  MainWindow.h
